[package]
name = "udl"
description = "Parser for UDL (Universal Data Language)"
version = "0.3.0"
authors = ["Torm"]
edition = "2021"
homepage = "https://github.com/Torm/udl-rs"
repository = "https://github.com/Torm/udl-rs"
license = "MIT OR Apache-2.0"
keywords = ["parser", "format", "serialization", "config"]
categories = ["config", "parser-implementations"]


[features]
default = ["common", "parse"]

parse = []
common = []

html = ["parse"]
tex = ["parse"]


[[bin]]
name = "udl-tex-cmd"
path = "src/tex/tex_command.rs"
required-features = ["tex"]


[[bin]]
name = "udl-html-cmd"
path = "src/html/html_command.rs"
required-features = ["html"]
