[package]
name = "khi"
description = "Khi parser & library"
version = "0.10.1"
authors = ["Torm"]
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/khilang/khi.rs"
repository = "https://github.com/khilang/khi.rs"
license = "MIT OR Apache-2.0"
keywords = ["parser", "format", "serialization", "config"]
categories = ["config", "parser-implementations"]

[dependencies]
ref-cast = "1.0.20"
serde = "1.0.192"
numtoa = "0.2.4"
hex = "0.4.3"

[features]
default = ["parse"]
# Lexer and parser
parse = []
# XML/HTML preprocessor
html = ["parse"]
# LaTeX preprocessor
tex = ["parse"]
# Serde serialization and deserialization
#serde = []
# Encoding and decoding Khi data structures
#enc = []

[[bin]]
name = "khi-tex-cmd"
path = "src/tex/command.rs"
required-features = ["tex"]

[[bin]]
name = "khi-html-cmd"
path = "src/html/command.rs"
required-features = ["html"]
